--- a/Resturants/StroyBoard/Profile.storyboard
+++ b/Resturants/StroyBoard/Profile.storyboard
@@ -1956,7 +1956,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="DNr-lP-YGS">
-                                                        <rect key="frame" x="0.0" y="55.666666666666629" width="361" height="552"/>
+                                                        <rect key="frame" x="0.0" y="55.666666666666629" width="361" height="552.00000000000011"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="USF-0P-i7q">
                                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="38"/>
@@ -4674,7 +4674,7 @@
                                                                                         </constraints>
                                                                                         <userDefinedRuntimeAttributes>
                                                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                                                <real key="value" value="8"/>
+                                                                                                <real key="value" value="20"/>
                                                                                             </userDefinedRuntimeAttribute>
                                                                                         </userDefinedRuntimeAttributes>
                                                                                     </view>
@@ -5125,13 +5125,13 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m91-dU-Xu0">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="59"/>
-                                <color key="backgroundColor" name="ColorBlack"/>
+                                <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFO-20-qnN">
                                 <rect key="frame" x="0.0" y="59" width="393" height="793"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="cAi-AL-777">
-                                        <rect key="frame" x="36.666666666666657" y="24" width="320" height="30"/>
+                                        <rect key="frame" x="36.666666666666657" y="12" width="320" height="30"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="APT-6b-gBd">
                                                 <rect key="frame" x="0.0" y="0.0" width="110" height="30"/>
@@ -5164,7 +5164,7 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" name="ColorBlack"/>
+                                                <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="OuD-LH-obM" secondAttribute="trailing" id="AOZ-IY-B44"/>
                                                     <constraint firstItem="OuD-LH-obM" firstAttribute="leading" secondItem="APT-6b-gBd" secondAttribute="leading" id="Atj-7D-5lK"/>
@@ -5208,7 +5208,7 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" name="ColorBlack"/>
+                                                <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="x19-jI-tnp" firstAttribute="top" secondItem="Cgv-0c-wEL" secondAttribute="top" id="9TM-AT-kgh"/>
                                                     <constraint firstAttribute="trailing" secondItem="tNz-9s-Zzd" secondAttribute="trailing" id="AhC-7f-zRi"/>
@@ -5223,7 +5223,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Sx4-mX-GmQ">
-                                        <rect key="frame" x="16" y="62" width="361" height="1"/>
+                                        <rect key="frame" x="16" y="50" width="361" height="1"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rUA-Gb-wiF">
                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="1"/>
@@ -5256,7 +5256,7 @@
                                                         </constraints>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" name="ColorLightGray"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.14538493377483444" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="W5D-J3-DKe" secondAttribute="bottom" id="43Q-ly-WOW"/>
                                                     <constraint firstAttribute="trailing" secondItem="YqS-N0-BwK" secondAttribute="trailing" id="IvL-WB-uEJ"/>
@@ -5270,16 +5270,17 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="rRv-kp-0yl">
-                                        <rect key="frame" x="8" y="148" width="377" height="621"/>
+                                        <rect key="frame" x="8" y="136" width="377" height="633"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vpP-WK-YRT">
-                                                <rect key="frame" x="0.0" y="0.0" width="377" height="621"/>
-                                                <color key="backgroundColor" name="ColorBlack"/>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vpP-WK-YRT">
+                                                <rect key="frame" x="0.0" y="0.0" width="377" height="633"/>
+                                                <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </tableView>
                                         </subviews>
+                                        <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </stackView>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder=" Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TDx-Vf-8Ac">
-                                        <rect key="frame" x="24" y="87" width="345" height="45"/>
+                                        <rect key="frame" x="24" y="75" width="345" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="Drr-2R-MgJ"/>
                                         </constraints>
@@ -5292,10 +5293,10 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" name="ColorBlack"/>
+                                <color key="backgroundColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="Sx4-mX-GmQ" firstAttribute="top" secondItem="cAi-AL-777" secondAttribute="bottom" constant="8" id="0nZ-pM-0Lr"/>
-                                    <constraint firstItem="cAi-AL-777" firstAttribute="top" secondItem="RFO-20-qnN" secondAttribute="top" constant="24" id="915-gR-3ZF"/>
+                                    <constraint firstItem="cAi-AL-777" firstAttribute="top" secondItem="RFO-20-qnN" secondAttribute="top" constant="12" id="915-gR-3ZF"/>
                                     <constraint firstAttribute="trailing" secondItem="TDx-Vf-8Ac" secondAttribute="trailing" constant="24" id="AY4-XY-7ZN"/>
                                     <constraint firstItem="rRv-kp-0yl" firstAttribute="leading" secondItem="RFO-20-qnN" secondAttribute="leading" constant="8" id="B5i-9F-L5D"/>
                                     <constraint firstItem="cAi-AL-777" firstAttribute="centerX" secondItem="RFO-20-qnN" secondAttribute="centerX" id="FO8-RW-fLZ"/>
@@ -5309,7 +5310,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SHW-E6-2pe"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="m91-dU-Xu0" secondAttribute="trailing" id="9vW-eZ-rKO"/>
                             <constraint firstItem="m91-dU-Xu0" firstAttribute="leading" secondItem="9rX-ar-6Bk" secondAttribute="leading" id="CjQ-qE-6IY"/>
@@ -5447,6 +5448,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cGl-qo-qaR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2719.8473282442746" y="-670.42253521126759"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1Kd-Hv-iRx">
+            <objects>
+                <viewController id="gl6-Au-q0b" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cMv-t1-0bI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ngW-sd-nDO">
+                                <rect key="frame" x="0.0" y="236" width="393" height="616"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag Persons" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lfb-rj-uJg">
+                                        <rect key="frame" x="12" y="21" width="369" height="22"/>
+                                        <fontDescription key="fontDescription" name="Inter-Regular_SemiBold" family="Inter" pointSize="18"/>
+                                        <color key="textColor" name="ColorWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ZU-qn-kNj">
+                                        <rect key="frame" x="341" y="12" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Bz5-ER-YzD"/>
+                                            <constraint firstAttribute="width" constant="40" id="Xq6-an-lyT"/>
+                                        </constraints>
+                                        <color key="tintColor" name="ColorWhite"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="multiply" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20" scale="large" weight="semibold"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Lfb-rj-uJg" secondAttribute="trailing" constant="12" id="EBz-Zj-KF5"/>
+                                    <constraint firstItem="Lfb-rj-uJg" firstAttribute="centerY" secondItem="4ZU-qn-kNj" secondAttribute="centerY" id="GbW-fv-cbf"/>
+                                    <constraint firstItem="Lfb-rj-uJg" firstAttribute="leading" secondItem="ngW-sd-nDO" secondAttribute="leading" constant="12" id="LeW-ra-7jx"/>
+                                    <constraint firstAttribute="height" constant="616" id="QQo-az-TO5"/>
+                                    <constraint firstAttribute="trailing" secondItem="4ZU-qn-kNj" secondAttribute="trailing" constant="12" id="Zfm-w6-fy0"/>
+                                    <constraint firstItem="4ZU-qn-kNj" firstAttribute="top" secondItem="ngW-sd-nDO" secondAttribute="top" constant="12" id="jWd-as-Z90"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="SJn-S9-DuF"/>
+                        <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ngW-sd-nDO" firstAttribute="leading" secondItem="cMv-t1-0bI" secondAttribute="leading" id="Eae-BS-b4c"/>
+                            <constraint firstAttribute="trailing" secondItem="ngW-sd-nDO" secondAttribute="trailing" id="a94-py-bbl"/>
+                            <constraint firstAttribute="bottom" secondItem="ngW-sd-nDO" secondAttribute="bottom" id="hO3-gg-eYa"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AIF-YG-AHc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3370.2290076335876" y="-670.42253521126759"/>
         </scene>
     </scenes>
     <resources>
